--- a/css/cloudy.css
+++ b/css/cloudy.css
@@ -46,7 +46,7 @@ body {
     z-index: 2000;
     width:400px;
     padding:20px;
-  padding-top: 0;
+    padding-top: 0;
     position:absolute;
     right: 0;
     height:100%;
@@ -95,4 +95,11 @@ body {
 
 .button-row {
     margin-top: 40px;
+}
+
+
+#pointview {
+    position: absolute;
+    width:100%;
+    height:100%;
 }
